src/test/deca/syntax/invalid/HelloWorld/Println-DblEscpQuote.deca
// Description:
//    String with double escape on quote
//
// Results:
//    test_lex : error line 12 on third quote
//
//
// History:
//    cree le 08/01/2022

{
println("\\"Hello");
}